# tetris-rl-spec-kit

./: .gitignore  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: placeholder.yml
demo_runs/latest/: episodes.csv  metrics.json
scripts/: bench_headless.py  reward_sweep.py  run_demo.py  train_demo.py
specs/001-a-demo-that/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-a-demo-that/contracts/: metrics-schema.json  replay-schema.json
src/tetris_rl/: __init__.py
src/tetris_rl/agent/: __init__.py  dqn.py  replay_buffer.py  trainer.py
src/tetris_rl/core/: board.py
src/tetris_rl/env/: __init__.py  dummy_env.py  observation_wrappers.py  reward_config.py  reward_wrapper.py  stagnation_wrapper.py  tetris_env.py
src/tetris_rl/metrics/: __init__.py  exporters.py  recorder.py  warnings.py
src/tetris_rl/models/: config.py  episode.py  frame.py  metric_stream.py  replay.py  session.py
src/tetris_rl/ui/: __init__.py
tests/: conftest.py
tests/contract/: test_metrics_export_schema.py  test_replay_export_schema.py
tests/integration/: test_config_run_isolated.py  test_evaluation_mode.py  test_headless_mode.py  test_interruption_partial_episode.py  test_notebook_init.py  test_replay_selection.py  test_stagnation_early_stop.py  test_training_loop_basic.py  test_warning_heuristics.py
tests/unit/: test_dqn_forward.py  test_observation_modes.py  test_replay_keyframe_stride.py  test_reward_wrapper.py  test_stagnation_detection.py  test_warning_heuristics.py
training_runs/demo/: episodes.jsonl  training_summary.txt
(+11 files in other folders)
