[project]
name = "tetris-rl-demo"
version = "0.1.0"
description = "Tetris RL Interpretability Demo: DQN baseline with notebook visualization and metrics exports"
authors = [ { name = "Tetris RL Team" } ]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["reinforcement-learning", "tetris", "gymnasium", "interpretability", "education"]

# Core runtime dependencies
dependencies = [
    "gymnasium>=0.29.0",
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.8.0",
    "ipywidgets>=8.1.0",
    "imageio[ffmpeg]>=2.34.0",
    "jsonschema>=4.21.0",
    # Web dashboard
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0"
]

[project.optional-dependencies]
# For development / testing
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "black>=24.4.0",
    "mypy>=1.10.0",
    "types-jsonschema",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "N", "A"]
ignore = ["E501"]  # line length delegated mostly to Black

[tool.pytest.ini_options]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.coverage.run]
branch = true
source = ["tetris_rl"]

